--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -8,7 +8,6 @@
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      transition: background 0.3s, color 0.3s;
     }
     html, body {
       user-select: none;
@@ -18,134 +17,133 @@
     }
     .overlay {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      z-index: 10;
+      top: 0; left: 0; right: 0; bottom: 0;
+      z-index: 30;
     }
-    .hiddenOverlay {
-      background: transparent;
-    }
-    .theme-dark-1 { background-color: #1f2937; color: white; }
-    .theme-dark-2 { background-color: #1e3a8a; color: white; }
-    .theme-dark-3 { background-color: #374151; color: white; }
-    .theme-dark-4 { background-color: #065f46; color: white; }
-    .theme-dark-5 { background-color: #7f1d1d; color: white; }
-    .theme-light-1 { background-color: #fef9c3; color: black; }
-    .theme-light-2 { background-color: #dbeafe; color: black; }
-    .theme-light-3 { background-color: #fce7f3; color: black; }
-    .theme-light-4 { background-color: #f3f4f6; color: black; }
-    .theme-light-5 { background-color: #dcfce7; color: black; }
   </style>
 </head>
-<body class="theme-dark-1 min-h-screen" oncontextmenu="return false;">
-  <div class="max-w-4xl mx-auto p-6 space-y-6">
-    <!-- Header -->
-    <header class="flex flex-col sm:flex-row sm:items-center justify-between space-y-2 sm:space-y-0">
-      <h1 class="text-4xl font-bold">Wind Breaker Season 1</h1>
-      <div class="flex space-x-3">
-        <select id="themeSwitcher" class="bg-white text-black p-2 rounded-xl">
-          <option value="theme-dark-1">Dark Gray</option>
-          <option value="theme-dark-2">Dark Blue</option>
-          <option value="theme-dark-3">Dark Slate</option>
-          <option value="theme-dark-4">Dark Green</option>
-          <option value="theme-dark-5">Dark Red</option>
-          <option value="theme-light-1">Light Yellow</option>
-          <option value="theme-light-2">Light Blue</option>
-          <option value="theme-light-3">Light Pink</option>
-          <option value="theme-light-4">Light Gray</option>
-          <option value="theme-light-5">Light Green</option>
+<body class="bg-gradient-to-b from-gray-900 via-black to-gray-900 text-white min-h-screen transition-colors duration-300" oncontextmenu="return false;">
+  <div class="max-w-6xl mx-auto p-4 space-y-6">
+    <header class="flex flex-col sm:flex-row sm:items-center justify-between">
+      <h1 class="text-4xl font-bold text-purple-300">Wind Breaker Season 1</h1>
+      <div class="flex items-center space-x-3 mt-3 sm:mt-0">
+        <input id="searchInput" type="text" placeholder="Search episode..." class="p-2 rounded bg-gray-800 text-white" />
+        <select id="themeSelector" class="p-2 rounded bg-gray-800 text-white">
+          <option value="default">Default Dark</option>
+          <option value="dark1">Dark: Purple</option>
+          <option value="dark2">Dark: Blue</option>
+          <option value="dark3">Dark: Gray</option>
+          <option value="dark4">Dark: Teal</option>
+          <option value="dark5">Dark: Rose</option>
         </select>
-        <a href="index.2.html" class="px-4 py-2 bg-purple-700 hover:bg-purple-800 text-white rounded-xl shadow">← Go Back</a>
+        <a href="index.2.html" class="px-4 py-2 bg-purple-700 hover:bg-purple-800 text-white rounded shadow">← Go Back</a>
+        <a href="support.html" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 text-white rounded shadow">💖 Support Us</a>
       </div>
-    </header><!-- Search Bar -->
-<input id="searchInput" type="text" placeholder="Search episode..." class="w-full p-2 rounded bg-white text-black">
-
-<!-- Video Player -->
-<div class="relative rounded-lg shadow-lg overflow-hidden aspect-video">
+    </header><div class="relative aspect-video rounded shadow bg-black overflow-hidden">
   <iframe
     id="videoPlayer"
     class="w-full h-full"
-    src="https://www.youtube.com/embed/ne0Y0vyjxpE?rel=0&modestbranding=1&autoplay=0&controls=1&fs=1"
+    src="https://www.youtube.com/embed/ne0Y0vyjxpE?rel=0&modestbranding=1&controls=1"
     frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"
+    allow="autoplay; encrypted-media; fullscreen"
     allowfullscreen>
   </iframe>
-  <div class="overlay hiddenOverlay" onclick="window.open('https://shebudriftaiter.net', '_blank')"></div>
+  <div id="videoOverlay" class="overlay cursor-pointer"></div>
 </div>
 
-<!-- Description -->
-<div id="animeDesc" class="p-4 rounded-lg text-sm shadow">Loading anime description...</div>
-
-<!-- Metadata -->
-<div class="p-4 rounded-lg shadow-inner space-y-1">
-  <h2 id="episodeTitle" class="text-xl font-semibold">Select an episode</h2>
-  <p id="episodeDesc" class="text-sm">Click any episode below to start watching.</p>
-  <p id="uploadDate" class="text-xs">Uploaded: —</p>
+<div id="animeDesc" class="bg-gray-800 p-4 rounded-lg shadow">
+  <h3 class="text-lg font-semibold mb-1">About Wind Breaker</h3>
+  <p>
+    Haruka Sakura joins the feared Furin High, only to discover its delinquents protect their town. With intense fights and emotional growth, Wind Breaker balances action with heart.
+  </p>
 </div>
 
-<!-- Episode List -->
+<div class="bg-gray-900 p-4 rounded shadow-inner space-y-1">
+  <h2 id="episodeTitle" class="text-xl font-semibold text-purple-300">Select an episode</h2>
+  <p id="episodeDesc" class="text-gray-300 text-sm">Click any episode below to start watching.</p>
+  <p id="uploadDate" class="text-gray-400 text-xs">Uploaded: —</p>
+</div>
+
 <div id="episodeList" class="grid grid-cols-1 sm:grid-cols-2 gap-4"></div>
 
-<!-- Special Thanks -->
-<footer class="mt-12 text-center text-sm border-t pt-6">
-  <p>Special thanks to the original creators, production studios, and copyright holders of <strong>Wind Breaker</strong>.</p>
-  <p class="mt-2 italic">All video content embedded on this site is property of their respective owners.</p>
-  <p class="mt-1 font-semibold">Support the official release whenever possible.</p>
+<footer class="mt-10 text-center text-sm text-gray-400 border-t border-gray-700 pt-6">
+  <p>Special thanks to the original creators and studios of <strong>Wind Breaker</strong>.</p>
+  <p class="italic">All video content is property of their respective owners and is shown for entertainment only.</p>
+  <p class="mt-2 text-purple-500 font-semibold">Support the official release whenever possible.</p>
 </footer>
 
   </div>  <script>
-    // Set saved theme
-    const themes = document.getElementById('themeSwitcher');
-    const savedTheme = localStorage.getItem('selectedTheme') || 'theme-dark-1';
-    document.body.className = savedTheme;
-    themes.value = savedTheme;
-
-    themes.addEventListener('change', (e) => {
-      document.body.className = e.target.value;
-      localStorage.setItem('selectedTheme', e.target.value);
-    });
-
-    // Description
-    const animeDesc = `<h3 class="text-lg font-semibold mb-1">About Wind Breaker</h3>
-    <p>Haruka Sakura joins the feared Furin High, only to discover its delinquents protect their town. With intense fights and emotional growth, Wind Breaker balances action with heart.</p>`;
-    document.getElementById("animeDesc").innerHTML = animeDesc;
-
+    // Episode data
     const episodes = [
-      { title: "Episode 1", link: "https://www.youtube.com/embed/ne0Y0vyjxpE", date:"2025-04-25" },
-      { title: "Episode 2", link: "https://www.youtube.com/embed/J2568cnOa1g", date:"2025-04-25" },
-      { title: "Episode 3", link: "https://www.youtube.com/embed/QOMv17IjJAU", date:"2025-04-25" },
-      { title: "Episode 4", link: "https://www.youtube.com/embed/MT7WzTJZCxg", date:"2025-04-25" },
-      { title: "Episode 5", link: "https://www.youtube.com/embed/4sRfndp1vAM", date:"2025-04-25" }
+      { title: "Episode 1", link: "https://www.youtube.com/embed/ne0Y0vyjxpE", date: "2025-04-25" },
+      { title: "Episode 2", link: "https://www.youtube.com/embed/J2568cnOa1g", date: "2025-04-25" },
+      { title: "Episode 3", link: "https://www.youtube.com/embed/QOMv17IjJAU", date: "2025-04-25" },
+      { title: "Episode 4", link: "https://www.youtube.com/embed/MT7WzTJZCxg", date: "2025-04-25" },
+      { title: "Episode 5", link: "https://www.youtube.com/embed/4sRfndp1vAM", date: "2025-04-25" },
+      { title: "Episode 6", link: "https://www.youtube.com/embed/oTvQ-5BNC6w", date: "2025-04-25" },
+      { title: "Episode 7", link: "https://www.youtube.com/embed/Em5lFIz_kxU", date: "2025-04-25" },
+      { title: "Episode 8", link: "https://www.youtube.com/embed/SBaGblvd4mU", date: "2025-04-25" },
+      { title: "Episode 9", link: "https://www.youtube.com/embed/43Hj2GySjgA", date: "2025-04-25" },
+      { title: "Episode 10", link: "https://www.youtube.com/embed/TIpodnZtFP4", date: "2025-04-25" },
     ];
 
-    const list = document.getElementById('episodeList');
     const player = document.getElementById('videoPlayer');
     const title = document.getElementById('episodeTitle');
-    const desc  = document.getElementById('episodeDesc');
-    const date  = document.getElementById('uploadDate');
+    const desc = document.getElementById('episodeDesc');
+    const date = document.getElementById('uploadDate');
+    const list = document.getElementById('episodeList');
+    const searchInput = document.getElementById('searchInput');
+    const themeSelector = document.getElementById('themeSelector');
+    const overlay = document.getElementById('videoOverlay');
 
-    function renderEpisodes(filter = '') {
-      list.innerHTML = '';
-      episodes
-        .filter(ep => ep.title.toLowerCase().includes(filter.toLowerCase()))
-        .forEach(ep => {
-          const btn = document.createElement('button');
-          btn.className = 'flex items-center space-x-3 p-3 bg-purple-700 hover:bg-purple-800 rounded-xl shadow-md';
-          btn.innerHTML = `<span class='text-pink-300 text-lg'>▶</span><span class='flex-1 text-left'>${ep.title}</span>`;
-          btn.onclick = () => {
-            player.src = ep.link + '?autoplay=1&rel=0&modestbranding=1&controls=1&fs=1';
-            title.textContent = ep.title;
-            desc.textContent = 'Wind Breaker Season 1 — ' + ep.title;
-            date.textContent = 'Uploaded: ' + ep.date;
-          };
-          list.appendChild(btn);
-        });
+    // Load stored theme
+    const savedTheme = localStorage.getItem('theme');
+    if (savedTheme) applyTheme(savedTheme);
+
+    function applyTheme(theme) {
+      const root = document.body.classList;
+      root.remove(...root);
+      root.add('min-h-screen', 'transition-colors', 'duration-300');
+
+      const themes = {
+        default: ['bg-gradient-to-b', 'from-gray-900', 'via-black', 'to-gray-900', 'text-white'],
+        dark1: ['bg-gradient-to-br', 'from-purple-900', 'to-gray-900', 'text-white'],
+        dark2: ['bg-gradient-to-tr', 'from-blue-900', 'to-black', 'text-white'],
+        dark3: ['bg-gradient-to-b', 'from-gray-800', 'via-gray-900', 'to-black', 'text-white'],
+        dark4: ['bg-gradient-to-br', 'from-teal-800', 'to-black', 'text-white'],
+        dark5: ['bg-gradient-to-b', 'from-rose-900', 'to-black', 'text-white']
+      };
+
+      root.add(...(themes[theme] || themes.default));
+      localStorage.setItem('theme', theme);
     }
 
-    document.getElementById('searchInput').addEventListener('input', (e) => {
-      renderEpisodes(e.target.value);
-    });
+    themeSelector.addEventListener('change', e => applyTheme(e.target.value));
 
+    // Load episodes
+    function renderEpisodes(filter = '') {
+      list.innerHTML = '';
+      episodes.filter(ep => ep.title.toLowerCase().includes(filter.toLowerCase())).forEach(ep => {
+        const btn = document.createElement('button');
+        btn.className = 'flex items-center space-x-3 p-3 bg-purple-700 hover:bg-purple-800 rounded shadow-md transition transform hover:scale-105';
+        btn.innerHTML = `<span class="text-pink-300">▶</span><span>${ep.title}</span>`;
+        btn.onclick = () => {
+          player.src = ep.link + '?autoplay=1&rel=0&modestbranding=1&controls=1';
+          title.textContent = ep.title;
+          desc.textContent = 'Wind Breaker Season 1 — ' + ep.title;
+          date.textContent = 'Uploaded: ' + ep.date;
+        };
+        list.appendChild(btn);
+      });
+    }
     renderEpisodes();
+
+    // Search episode
+    searchInput.addEventListener('input', (e) => renderEpisodes(e.target.value));
+
+    // Overlay click (Popunder Ad)
+    overlay.addEventListener('click', () => {
+      window.open('https://shebudriftaiter.net/tag.min.js', '_blank');
+    });
   </script></body>
 </html>
